# DCA1000-EVM-remote-collection

./: README.md  _AR_UI_.cpp  _AR_UI_.h  _AR_UI_.sln  _AR_UI_.ui  _AR_UI_.vcxproj  _AR_UI_.vcxproj.filters  main.cpp  采集卡操作函数.pptx
RADAR_BIN_FILES/: profile_continuous_mode_xwr18xx.cfg  profile_monitor_xwr16xx.cfg  profile_monitor_xwr18xx.cfg  profile_monitor_xwr68xx.cfg
_AR_ADDONs_/: IPSetWidget.cpp  IPSetWidget.h  IPSetWidget.ui
_AR_Comm_/: _AR_dca1000_rf_api.h
_AR_decode/: BitTree.h  _wave_AR_decode_.h  a_coder_define.h
_AR_define_/: TCP_compress_define.h  TCP_define.h  TCP_function_define.h  TCP_packet_define.h  _AR_UI_define_.h  _AR_actor_define_.h  _net_work_define_.h
_AR_include_/: _AR_UI_INFO_SUBSYSTEM_.h  tcp_client_build.h  tcp_server_build.h
_AR_utility_/: linked_list.h  server_list.h
_LINUX_VERSION_/: main.cpp  profile_monitor_xwr18xx.cfg
_LINUX_VERSION_/include/: linked_list.cpp  linked_list.h  radar_define.cpp  udp_client.cpp  udp_define.h  udp_server.cpp  udp_server.h
_LINUX_VERSION_SERVER_/: main.cpp  server_windows_version.cpp  server_windows_version.h  udp_define.h
dca1000ctrl/dca1000ctrl/: CMakeLists.txt  package.xml  profile_monitor_xwr18xx.cfg
dca1000ctrl/dca1000ctrl/include/: drone_attitude.cpp  drone_attitude.h  radar_define.cpp  radar_define.h  udp_client.cpp  udp_client.h
dca1000ctrl/dca1000ctrl/msg/: instruction.msg
dca1000ctrl/dca1000ctrl/src/: main_program.cpp
